<resources>
    <string name="app_name">云网智疗</string>
    <string name="tab_1">资讯</string>
    <string name="tab_2">商城</string>
    <string name="tab_3">好友</string>
    <string name="tab_4">购物车</string>
    <string name="tab_5">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_account_number">账号</string>
    <string name="login_password">密码</string>
    <string name="login_pws">请输入登录密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_change">修改密码</string>
    <string name="login_register">注册</string>
    <string name="login_other">其他方式登陆</string>
    <string name="register_user">用户注册</string>
    <string name="register_doctor">医生注册</string>
    <string name="register_phone">手机号码</string>
    <string name="register_name">用户名</string>
    <string name="register_code">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_psw">请输入6~16位密码</string>
    <string name="register_psw2">请再次输入密码</string>
    <string name="register_hospital">所属医院</string>
    <string name="register_consultingRoom">所属科室</string>
    <string name="register_doctor_verification">医师认证请上传相关证件,人工审核会有延迟请见谅。</string>
    <string name="register_agreement">注册代表同意《云网智疗电子商城协议》</string>
    <string name="register_complete">完成</string>
    <string name="information">"智疗咨询"</string>
    <string name="shopping_search_msg">输入你要找的商品</string>
    <string name="shopping_title">全部</string>
    <string name="shopping_title1">类型1</string>
    <string name="shopping_title2">类型2</string>
    <string name="shopping_title3">类型3</string>
    <string name="shopping_title4">类型4</string>
    <string name="shopping_title5">类型5</string>
    <string name="me_order">我的订单</string>
    <string name="me_all_order">查看全部订单</string>
    <string name="me_pending_payment">待付款</string>
    <string name="me_waiting_for_delivery">待发货</string>
    <string name="me_receiving_goods">待收货</string>
    <string name="me_already_buy">已买到</string>
    <string name="me_customer_service">退货售后</string>
    <string name="me_address">收货地址</string>
    <string name="me_discount">优惠方案</string>
    <string name="me_product">产品介绍</string>
    <string name="me_install">设置</string>
    <string name="shopping_cart_add">同意</string>
    <string name="shopping_cart_msg">你的购物车空空如也</string>
    <string name="shopping_cart_go">去逛逛</string>
    <string name="shopping_cart_settlement">结算</string>
    <string name="shopping_cart_delete">删除</string>
    <string name="shopping_cart_complete">完成</string>
    <string name="shopping_cart_edit">编辑</string>
    <string name="shopping_cart_select">全选</string>
    <string name="shopping_cart_mall">云网智疗网上商城</string>
    <string name="indent_all">全部</string>
    <string name="indent_obligation">待付款</string>
    <string name="indent_committed">待发货</string>
    <string name="indent_collect">待收货</string>
    <string name="indent_buy">已买到</string>
    <string name="indent_total">价格合计:</string>
    <string name="indent_payment">待付款</string>
    <string name="indent_logistics">查询物流</string>
    <string name="indent_confirm">确认收货</string>
    <string name="indent_type">类型:</string>
    <string name="indent_standard">规格:</string>
    <string name="indent_rmb">¥</string>
    <string name="indent_msg">还没有订单哦,点击按钮去商城下单吧!</string>
    <string name="friends_news">消息</string>
    <string name="friends_friends">好友</string>
    <string name="friends_head">输入ID/昵称/医院/科</string>
    <string name="friends_head2">输入商品名称</string>
    <string name="friends_new">新好友</string>
    <string name="aftermarket_title">退货／售后</string>
    <string name="aftermarket_state1">请尽快将商品寄回</string>
    <string name="aftermarket_state4">等待卖家确认收货</string>
    <string name="aftermarket_state2">卖家处理中</string>
    <string name="aftermarket_state3">已退款</string>
    <string name="aftermarket_reimburse">退款金额</string>
    <string name="information_phone">智疗ID:</string>
    <string name="information_address">所在地区:</string>
    <string name="information_hospital">所属医院:</string>
    <string name="information_family">所属科:</string>
    <string name="information_birthday">生日:</string>
    <string name="information_height">身高:</string>
    <string name="information_weight">体重:</string>
    <string name="information_compile">编辑资料</string>
    <string name="information_kg">Kg</string>
    <string name="information_cm">cm</string>
    <string name="information_save">保存</string>
    <string name="compile_title">个人信息</string>
    <string name="compile_pic">头像</string>
    <string name="compile_name">昵称</string>
    <string name="compile_address">所在地</string>
    <string name="compile_sex">性别</string>
    <string name="compile_phone">智疗ID</string>
    <string name="compile_height">身高</string>
    <string name="compile_weight">体重</string>
    <string name="compile_hospital">所属医院</string>
    <string name="compile_family">科</string>
    <string name="compile_birthday">生日</string>
    <string name="compile_photo">相册</string>
    <string name="compile_camera">相机</string>
    <string name="compile_cancel">取消</string>
    <string name="compile_cancel2">搜索</string>
    <string name="install_change_psw">修改密码</string>
    <string name="install_suggest">投诉与建议</string>
    <string name="install_about">关于我们</string>
    <string name="install_out">退出登录</string>
    <string name="suggest_input">请输入您的宝贵建议</string>
    <string name="suggest_submit">提交</string>
    <string name="details_logistics">物流公司:</string>
    <string name="details_number">物流单号:</string>
    <string name="details_information">物流信息</string>
    <string name="details_dispatching">配送方式:</string>
    <string name="details_freight">快递运费:</string>
    <string name="details_name">收货人:</string>
    <string name="details_price">价格合计:</string>
    <string name="details_recommender">推荐人号码:</string>
    <string name="details_order">订单编号:</string>
    <string name="details_time">提交时间:</string>
    <string name="details_discount">优惠信息:</string>
    <string name="details_total">总价:</string>
    <string name="details_payment">确认下单</string>
    <string name="details_receipt">确认收货</string>
    <string name="details_out">退货/退款</string>
    <string name="details_h">小时</string>
    <string name="details_m">分钟后取消订单</string>
    <string name="details_title">订单详情</string>
    <string name="details_title2">待付款订单</string>
    <string name="after_msg">退货且退款</string>
    <string name="after_title">退货退款</string>
    <string name="after_msg2">需要退回已收到的商品</string>
    <string name="after_msg3">退款</string>
    <string name="after_msg4">未收到商品,或协商一致</string>
    <string name="return_tv1">不想要/拍错了等个人原因</string>
    <string name="return_tv2">未按约定时间发货</string>
    <string name="return_tv3">协商一致退款</string>
    <string name="return_tv4">无客服接待</string>
    <string name="return_tv5">未按时间发货</string>
    <string name="return_tv6">其他</string>
    <string name="address_title">管理收货地址</string>
    <string name="address_title2">编辑收货地址</string>
    <string name="address_add">添加</string>
    <string name="address_delete">删除</string>
    <string name="address_default">设为默认</string>
    <string name="address_edit">编辑</string>
    <string name="address_user">收货人:</string>
    <string name="address_phone">手机号:</string>
    <string name="address_postcode">邮政编码:</string>
    <string name="address_provincial">省市区:</string>
    <string name="address_detailed">详细地址:</string>
    <string name="mall_sold">售出</string>
    <string name="mall_inventory">库存</string>
    <string name="mall_original">商品价 ¥</string>
    <string name="mall_describe">商品描述</string>
    <string name="mall_factory">生产企业:</string>
    <string name="mall_describe2">商品详情</string>
    <string name="mall_service">客服</string>
    <string name="mall_share">分享</string>
    <string name="mall_purchase">立即购买</string>
    <string name="mall_join">加入购物车</string>
    <string name="mall_msg">单号录入为人工操作,存在延时</string>
    <string name="mall_friend">智疗好友</string>
    <string name="mall_weixin">微信好友</string>
    <string name="mall_QQ">QQ好友</string>
    <string name="mall_type">种类</string>
    <string name="mall_num">数量</string>
    <string name="mall_standard">规格</string>
    <string name="mall_confirm">确定</string>
    <string name="return_title">申请售后</string>
    <string name="return_cause">退款原因</string>
    <string name="return_cause_msg">请选择退款原因</string>
    <string name="return_money">退款金额</string>
    <string name="return_money_hint">本次退款最多:</string>
    <string name="return_money_hint2">元</string>
    <string name="return_way">退款方式</string>
    <string name="return_way_msg">原路退还(2-7个工作日退至原支付账号)</string>
    <string name="return_money_msg">输入金额</string>
    <string name="return_explain_msg">填写退款说明,退货更快捷</string>
    <string name="return_explain">退款说明</string>
    <string name="return_hint3">上传凭证(最多3张)</string>
    <string name="return_button">提交申请</string>
    <string name="returnInfo_state1">等待商家确认收货</string>
    <string name="returnInfo_state2">尽快将商品退回</string>
    <string name="returnInfo_msg">如果商家确认收货:退款成功并退款到您的付款账号</string>
    <string name="returnInfo_msg2">如果商家拒绝:需要从新修改退货信息</string>
    <string name="returnInfo_msg3">如果商家未处理:超过15天时申请达成并为您退款</string>
    <string name="returnInfo_examine">查询物流状态</string>
    <string name="returnInfo_examine2">填写物流信息</string>
    <string name="returnInfo_type">退款类型</string>
    <string name="returnInfo_reason">退款理由</string>
    <string name="returnInfo_time">申请时间</string>
    <string name="logistic_info_firm">物流公司</string>
    <string name="logistic_info_msg">请填写物流公司</string>
    <string name="logistic_info_numbers">快递单号</string>
    <string name="logistic_info_phone">手机号码</string>
    <string name="logistic_info_explain">退货说明</string>
    <string name="logistic_info_msg4">请填写退货说明</string>
    <string name="logistic_info_msg3">请填写手机号码</string>
    <string name="logistic_info_msg2">请填写快递单号</string>
    <string name="logistic_examine">物流状态</string>
    <string name="logistic_title">物流信息</string>
    <string name="add_title">编辑收货地址</string>
    <string name="add_right">完成</string>
    <string name="add_phone">手机号:</string>
    <string name="add_name">收货人:</string>
    <string name="add_city">省市区:</string>
    <string name="add_location">详细地址:</string>
    <string name="add_postcode">邮政编码:</string>
    <string name="chat_send">发送</string>
    <string name="search_msg">没有找到你要搜索的用户</string>
    <string name="search_msg2">没有找到你要搜索的商品</string>
    <string name="new_friend_title">新好友</string>
    <string name="new_friend_yes">已添加</string>
    <string name="new_friend_no">已拒绝</string>
</resources>