<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv4" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv5"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv5" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/return_tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/return_tv6" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/compile_cancel"
        android:textColor="@color/white" />
</RelativeLayout>