<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"

    tools:context="aromatherapy.saiyi.cn.cloudwisdomtherapy.activity.MallActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mall_goods_iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/zhifubao_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mall_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="灵丹妙药"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_sold" />

                <TextView
                    android:id="@+id/mall_sold_tv"
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1234" />

                <TextView
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_inventory" />

                <TextView
                    android:id="@+id/mall_inventory_tc"
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="1234" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/indent_rmb"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/mall_money_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12.23"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mall_original" />

                <TextView
                    android:id="@+id/mall_original_tv"
                    style="@style/MallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19.99" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/zircon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/mall_describe"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_factory" />

                <TextView
                    android:id="@+id/mall_factory_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="不知道名字的生产厂家" />
            </LinearLayout>

            <TextView
                android:id="@+id/mall_introduce_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="kjasdjxncasdasdadadaadasdsdasdasda" />

            <TextView
                style="@style/MallText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/mall_msg" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/zircon" />

            <TextView
                android:id="@+id/mall_describe_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:padding="10dp"
                android:text="@string/mall_describe2"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"

                android:background="@color/zircon" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/mall_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:src="@drawable/fanhui_round_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/linearLayout"
        android:background="@color/zircon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mall_service_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/kefu_gray_icon"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mall_service" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/zircon" />

        <TextView
            android:id="@+id/mall_share_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/fenxiang_gray_icon"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mall_share" />

        <TextView
            android:id="@+id/mall_join_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mall_join"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/mall_purchase_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/mall_purchase"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
